Add documentation for list all tiger sightings api and refactor response for list all tigers api
